feat(backend): add authentication
